# swo-debug-2

./: .mxproject  CMakeLists.txt  nucleo-f411.ioc
Core/Src/: main.cpp
SWOLib/: CMakeLists.txt  swo-backend.cpp  swo-backend.hpp  swo-debug.cpp  swo-debug.hpp
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
